--- a/navbar.css
+++ b/navbar.css
@@ -24,6 +24,7 @@ ul {
 li {
   display: inline-block;
   text-align: center;
+  margin-right: 4rem;
 }
 
 nav {
@@ -34,6 +35,7 @@ nav {
   align-items: center;
 }
 
+
 .hamburger {
   position: absolute;
   cursor: pointer;
@@ -42,6 +44,7 @@ nav {
   top: 3%;
   border: 1px solid white;
   padding: 5px;
+  display: none;
 }
 
 .line1 {
@@ -74,3 +77,17 @@ nav {
   align-items: center;
   justify-content: space-around;
 }
+
+@media screen and (max-width: 768px) {
+  .nav-links {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .hamburger {
+    display: block;
+  }
+}
+
